--- a/_config.yml
+++ b/_config.yml
@@ -286,8 +286,8 @@ display_categories: ["blockquotes"] # these categories will be displayed on the 
 # -----------------------------------------------------------------------------
 
 scholar:
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+  last_name: [Zheng]
+  first_name: [Zhongtian]
 
   style: apa
   locale: en
