--- a/_config.yml
+++ b/_config.yml
@@ -242,6 +242,11 @@ plugins:
   - jekyll-toc
   - jekyll-twitter-plugin
   - jemoji
+  - jekyll-multiple-languages-plugin
+
+# multi language settings
+languages: ["en", "cn"]
+default_locale_in_subfolder: false
 
 # Sitemap settings
 defaults:
