--- a/_i18n/cn.yml
+++ b/_i18n/cn.yml
@@ -9,3 +9,11 @@ titles:
   teaching: 教学
   submenus: 子菜单
   unk: 页面未找到
+projects:
+  titles:
+    project1: Project 1
+    project2: Project 2
+    project3: Project 3
+    project4: Project 4
+    project5: Project 5
+    project6: Project 6
