--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -1,10 +1,10 @@
 titles:
-  about: about
-  blog: blog
-  cv: cv
-  news: news
+  about: About
+  blog: Blog
+  cv: CV
+  news: News
   projects: projects
-  publications: publications
+  publications: Publications
   repositories: repositories
   teaching: teaching
   submenus: submenus
